--- a/main.css
+++ b/main.css
@@ -1,5 +1,69 @@
-.followBtn {
+body {
   display: block;
-  text-align: center;
+  margin: 0 auto;
+}
+
+#navbar {
+  display: block;
   width: 100%;
+  margin-top: 24px;
+}
+
+#profile {
+  border: none;
+}
+
+#overviewContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+h2 {
+  display: block;
+  font-size: 18px;
+  margin-bottom: 8px;
+  margin-left: 16px;
+  margin-right: -16px;
+}
+
+#cardContainer {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: stretch;
+  width: 100%;
+  margin-left: 8px;
+  margin-right: -8px;
+}
+
+.card {
+  display: flex;
+  width: 75%;
+  padding: 16px;
+  align-content: stretch;
+  border-radius: 10px;
+  margin-bottom: 16px;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+/* max of 2 cards per row */
+@media(min-width: 768px) {
+  .card {
+    flex: 0 40%;
+    flex-grow: 0;
+  }
+}
+
+#footerContainer {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-bottom: 40px;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
 }
