--- a/main.css
+++ b/main.css
@@ -1,28 +1,102 @@
 body{
     background-color: #0d1117;
     display: inline-block;
- 
+    color: #aaa;
+}
+.nav-link{
+    color: rgb(116, 115, 115);
 }
 
 
-
 .navbar{
-    width:100%; 
+    background-color: #0d1117;
+    width:900px; 
     position: relative;
-<<<<<<< HEAD
-    left: 425px; 
-=======
-    left: 500px; 
->>>>>>> main
+    left: 400px; 
+    color:rgb(116, 115, 115);
 }   
-   
+.card{
+    background-color: transparent;
+    border: solid 1px rgb(116, 115, 115);
+    padding: 10px;
+}   
 .profile-card{
     position: relative;
-<<<<<<< HEAD
+    width: 900px;
+    height: 1200px;
     top: 0px;
     left: 100px; 
-=======
-    top: 4px;
-    left: 150px; 
->>>>>>> main
+    padding-left: 40px;
+}
+
+.form-control{
+    background-color: #090d13;
+}
+
+.btn-primary{
+    background-color: #238636;
+    border: solid 1px #238636;
+}
+.loopCard{
+    position: absolute;
+    width: 900px;
+    height: 90px;
+    left: 400px;
+    top: 50px;
+    margin: 10px;
+}
+.formStyle{
+    position: absolute;
+    width: 900px;
+    height: 90px;
+    left: 400px;
+    top:750px;
+    margin: 10px;
+    border:1px solid #0d1117;
+}
+.footerStyle{
+    position: absolute;
+    width: 90%; 
+    top:1400px;
+    left: 50px;
+    margin: 10px;
+    padding: 15px;
+    border-top:solid 1px rgb(116, 115, 115);
+}
+.list-group{
+    height: 600px;
+}
+.btn-secondary{
+    background-color: #21272c;
+    border: 0; 
+}
+
+.card-header{
+    background-color:#161b21;
+    border: solid 1px rgb(116, 115, 115);
+}
+h5 {
+    font-size: 25px;
+}
+.packagesContainer{
+    display:flex;
+    flex-wrap: wrap;
+}
+.repoForm {
+    position: absolute;
+    width: 900px;
+    height: 90px;
+    left: 400px;
+    top:1150px;
+    margin: 10px;
+    border:1px solid #0d1117;
+}
+.repoFooter{
+    position: absolute;
+    width: 90%; 
+    top:1800px;
+    left: 50px;
+    margin: 10px;
+    padding: 15px;
+    border-top:solid 1px rgb(116, 115, 115);
 }
