--- a/main.css
+++ b/main.css
@@ -87,14 +87,14 @@ h5 {
     width: 900px;
     height: 90px;
     left: 400px;
-    top:1150px;
+    top:1400px;
     margin: 10px;
     border:1px solid #0d1117;
 }
 .repoFooter{
     position: absolute;
     width: 90%; 
-    top:1800px;
+    top:1900px;
     left: 50px;
     margin: 10px;
     padding: 15px;
@@ -103,4 +103,17 @@ h5 {
 
 .fas {
     margin: 4px;
+}
+.loopContainer{
+    display: flex;
+    flex-direction: column;
+}
+.projectForm{
+    position: absolute;
+    width: 900px;
+    height: 90px;
+    left: 400px;
+    top:950px;
+    margin: 10px;
+    border:1px solid #0d1117
 }
