--- a/main.css
+++ b/main.css
@@ -13,6 +13,9 @@ body{
   margin-top: 24px;
   background: transparent;
 }
+.card-img-top {
+    border-radius: 50%;
+}
 
 .navbar{
     background-color: #0d1117;
@@ -20,7 +23,11 @@ body{
     position: relative;
     left: 400px; 
     color:rgb(116, 115, 115);
+    margin-bottom: 30px;
 }   
+.nav-link:hover {
+    color: white;
+}
 
 ul {
     list-style-type: none;
@@ -35,9 +42,8 @@ ul {
     position: relative;
     width: 900px;
     height: 1200px;
-    top: 0px;
+    top: -70px;
     left: 100px; 
-    padding-left: 40px;
 }
 
 .form-control{
@@ -48,13 +54,14 @@ ul {
     background-color: #238636;
     border: solid 1px #238636;
 }
+
 .loopCard{
     position: absolute;
     width: 900px;
     height: 90px;
     left: 400px;
     top: 50px;
-    margin: 10px;
+    margin: 30px 20px;
 }
 .formStyle{
     position: absolute;
