--- a/main.css
+++ b/main.css
@@ -134,3 +134,16 @@ h5 {
     border: solid 1px rgb(116, 115, 115);
     padding: 10px;
 }   
+
+#cbForm {
+    margin-left: -410px;
+}
+
+#pinnedRepo {
+    margin-left: -410px;
+    margin-bottom: 16px;
+}
+
+#repoCard {
+
+}
