--- a/main.css
+++ b/main.css
@@ -162,3 +162,9 @@ h5 {
     border: solid 1px rgb(116, 115, 115);
     padding: 10px;
 } 
+.sortBtnContainer{
+    position: absolute;
+    background-color: transparent;
+    top:3px;
+    left:810px;
+}
