--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@ body{
     display: inline-block;
     color: #aaa;
 }
+
 .nav-link{
     color: rgb(116, 115, 115);
 }
@@ -157,6 +158,7 @@ h5 {
     border:1px solid #0d1117
 }
 
+/* BELOW IS FOR OVERVIEW PAGE */
 #pinned {
     font-size: 24px;
 }
@@ -165,11 +167,12 @@ h5 {
     background-color: transparent;
     border: solid 1px rgb(116, 115, 115);
     padding: 10px;
-<<<<<<< HEAD
+    position: relative;
 }   
 
 .cbForm {
     margin-left: -400px;
+    margin-top: 400px;
 }
 
 #pinnedRepo {
@@ -178,15 +181,29 @@ h5 {
     margin-left: 8px;
     margin-right: 8px;
     height: 120px;
-    width: 300px;
 }
 
 .repoCards {
     margin-top: -5px;
-    margin-left: -400px;
     display: flex;
     flex-wrap: wrap;
+    margin-left: -8px;
 }
-=======
-} 
->>>>>>> main
+
+#aboutArea {
+    border: solid 1px rgb(116, 115, 115);
+    border-radius: 10px;
+    justify-content: center;
+    width: 1600px !important;
+    height: 850px;
+}
+
+.overviewFooter {
+    position: absolute;
+    width: 90%; 
+    top:1900px;
+    left: 50px;
+    margin: 10px;
+    padding: 15px;
+    border-top:solid 1px rgb(116, 115, 115);
+}
