--- a/main.css
+++ b/main.css
@@ -161,6 +161,8 @@ h5 {
 /* BELOW IS FOR OVERVIEW PAGE */
 #pinned {
     font-size: 24px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 #cbContainer{
@@ -172,7 +174,7 @@ h5 {
 
 .cbForm {
     margin-left: -400px;
-    margin-top: 400px;
+    margin-top: 600px;
 }
 
 #pinnedRepo {
@@ -200,10 +202,5 @@ h5 {
 
 .overviewFooter {
     position: absolute;
-    width: 90%; 
-    top:1900px;
-    left: 50px;
-    margin: 10px;
-    padding: 15px;
-    border-top:solid 1px rgb(116, 115, 115);
+    top: 1800px;
 }
