--- a/main.css
+++ b/main.css
@@ -171,7 +171,7 @@ h5 {
 /* BELOW IS FOR OVERVIEW PAGE */
 #pinned {
     font-size: 24px;
-    margin-top: 20px;
+    margin-top: 40px;
     margin-bottom: 20px;
 }
 
@@ -179,11 +179,13 @@ h5 {
     background-color: transparent;
     border: solid 1px rgb(116, 115, 115);
     padding: 10px;
+    font-size: 20px;
+
 }   
 
 .cbForm {
-    margin-left: -400px;
-    margin-top: 500px;
+    margin-left: -410px;
+    margin-top: 700px;
 }
 
 #pinnedRepo {
@@ -191,7 +193,7 @@ h5 {
     margin-bottom: 16px;
     margin-left: 8px;
     margin-right: 8px;
-    height: 120px;
+    height: 150px;
 }
 
 .repoCards {
@@ -199,17 +201,36 @@ h5 {
     display: flex;
     flex-wrap: wrap;
     margin-left: -8px;
+    width: 1200px !important;
 }
 
 #aboutArea {
     border: solid 1px rgb(116, 115, 115);
     border-radius: 10px;
     justify-content: center;
-    width: 1600px !important;
-    height: 850px;
+    width: 1620px !important;
+    height: 900px;
     margin-top: -50px;
+    padding-left: 20px;
+}
+
+#aboutHeader { 
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#aboutDescription {
+    padding-top: 30px;
+    font-size: 20px;
+}
+
+#aboutList {
+    list-style-type: circle;
+    padding-left: 200px;
+    font-size: 20px;
 }
 
 .overviewFooter {
-    top: 1800px;
+    top: 2100px;
 }
+/* ABOVE IS FOR OVERVIEW PAGE */
